--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
-  "dependencies": {
-    "cypress": "^13.6.6"
+  "name": "cypressautomation",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "smoke_chrome":"cypress run --headed --browser chrome",
+    "smoke_firefox":"cypress run --headed --browser firefox"
+
+  },
+  "author": "divya",
+  "license": "ISC",
+  "devDependencies": {
+    "cypress": "^13.6.6",
+    "cypress-file-upload": "^5.0.8",
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "cypress-xpath": "^2.0.1",
+    "iframe": "^1.0.0"
   }
 }
